[gd_scene load_steps=42 format=3 uid="uid://r1ntcqdujfol"]

[ext_resource type="Script" uid="uid://j84s4qlkmfxw" path="res://game/stages/game_stage.gd" id="1_a36me"]
[ext_resource type="Script" uid="uid://bqw08o3b22fdc" path="res://game/stages/line_reader_custom.gd" id="3_pms35"]
[ext_resource type="Script" uid="uid://brouc1vl1o5us" path="res://game/stages/objects.gd" id="3_x2eff"]
[ext_resource type="PackedScene" uid="uid://baiq36mlxyovb" path="res://game/stages/control_window.tscn" id="8_3xf2c"]
[ext_resource type="PackedScene" uid="uid://qkegdwc8ux5o" path="res://game/stages/black_fade.tscn" id="8_50byo"]
[ext_resource type="Texture2D" uid="uid://dybhitvsbggl0" path="res://game/visuals/palette.png" id="8_j1uqk"]
[ext_resource type="Script" uid="uid://c2vvnjn4tl6a7" path="res://game/stages/game_camera.gd" id="9_lbjue"]
[ext_resource type="Theme" uid="uid://drk5fhsdjoewf" path="res://game/visuals/theme/diisis_theme.tres" id="11_n0ymb"]
[ext_resource type="PackedScene" uid="uid://cjy7vf1xrnq5y" path="res://game/screens/chapter_cover.tscn" id="12_vf2y4"]
[ext_resource type="PackedScene" uid="uid://biu88w163ploy" path="res://game/systems/cheats.tscn" id="13_qackq"]
[ext_resource type="Script" uid="uid://byyv78vc44g4u" path="res://game/stages/start_cover.gd" id="13_qfsh6"]
[ext_resource type="Material" uid="uid://cjfy0guf7efb6" path="res://game/visuals/shaders/quantize_material.tres" id="14_3xf2c"]
[ext_resource type="Shader" uid="uid://bhcpxuibbsole" path="res://game/stages/one_fadeout.gdshader" id="15_heqc4"]
[ext_resource type="Shader" uid="uid://oj2v8kbp13pd" path="res://game/stages/static.gdshader" id="17_dc0ef"]
[ext_resource type="PackedScene" uid="uid://ipa310726xyt" path="res://game/stages/rolling_credits.tscn" id="17_gnute"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ca2q"]
resource_local_to_scene = true
shader = ExtResource("15_heqc4")
shader_parameter/lod = 0.0
shader_parameter/mix_percentage = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_scr08"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkxqd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ngewe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s5n3v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrqx2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6in5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5poes"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gq6j1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p2i0s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p17qu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6jtk0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_orud1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_akdev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wvc3f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uymoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xu5yj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n5rkc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yusuu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0c6oi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwriq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfwvw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgtnv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d8rgb"]
shader = ExtResource("17_dc0ef")
shader_parameter/intensity = 0.0
shader_parameter/border_size = 1.0

[sub_resource type="Gradient" id="Gradient_3xf2c"]
colors = PackedColorArray(0, 0, 0, 1, 1, 0.496875, 0.906659, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j1uqk"]
gradient = SubResource("Gradient_3xf2c")

[node name="GameStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_a36me")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.858824)

[node name="LineReader" type="Node" parent="." node_paths=PackedStringArray("name_label", "body_label", "text_container", "name_container")]
script = ExtResource("3_pms35")
auto_pause_duration = 0.4
blank_names = Array[String](["narrator"])
name_map = Dictionary[String, String]({
"amber": "Amber"
})
name_label = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer/NameLabel")
body_label = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer/BodyLabel")
text_container = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer")
name_container = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer/NameLabel")
body_label_function_funnel = Array[String](["Style.adjust_font_size_tags"])
choice_button_keyboard_focus = false
input_prompt_delay = 1.29
input_prompt_lerp_weight = 0.233

[node name="Objects" type="Node2D" parent="LineReader"]
script = ExtResource("3_x2eff")

[node name="Characters" type="Node2D" parent="LineReader"]

[node name="Camera2D" type="Camera2D" parent="LineReader"]
position = Vector2(502, 377)
script = ExtResource("9_lbjue")

[node name="CGBottom" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="Control" type="Control" parent="LineReader/Camera2D/CGBottom"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CGBottomContainer" type="Control" parent="LineReader/Camera2D/CGBottom/Control"]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VFX" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="VFXLayer" type="Node2D" parent="LineReader/Camera2D/VFX"]

[node name="FadeOut" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="LineReader/Camera2D/FadeOut"]
material = SubResource("ShaderMaterial_3ca2q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Orgasm" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="LineReader/Camera2D/Orgasm"]
material = SubResource("ShaderMaterial_3ca2q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VNUICanvasLayer" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="VNUIRoot" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("11_n0ymb")

[node name="VNUI" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Windows" type="Node" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI"]

[node name="TextWindow1" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows" instance=ExtResource("8_3xf2c")]
offset_left = 89.0
offset_top = 96.0
offset_right = -779.0
offset_bottom = 181.0

[node name="TitleLabel" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/HBoxContainer" index="0"]
text = "BARK"

[node name="TextContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer" index="0"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer"]
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1/PanelContainer/ContentContainer/TextContainer"]
layout_mode = 2
text = "hgfudjfhg"
fit_content = true

[node name="TextWindow2" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows" instance=ExtResource("8_3xf2c")]
offset_left = 569.0
offset_top = 219.0
offset_right = -299.0
offset_bottom = 305.0

[node name="TitleLabel" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow2/HBoxContainer" index="0"]
text = "BARK"

[node name="TextContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow2/PanelContainer/ContentContainer" index="0"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow2/PanelContainer/ContentContainer/TextContainer"]
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow2/PanelContainer/ContentContainer/TextContainer"]
layout_mode = 2
text = "hgfudjfhg"
fit_content = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows"]
offset_left = 235.0
offset_top = 66.0
offset_right = 275.0
offset_bottom = 106.0

[node name="SubViewport" type="SubViewport" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Window" type="Window" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/SubViewportContainer/SubViewport"]
position = Vector2i(0, 36)

[node name="Sprite2D" type="Sprite2D" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/SubViewportContainer/SubViewport"]
position = Vector2(197, 113)
scale = Vector2(12.12, 12.12)
texture = ExtResource("8_j1uqk")

[node name="ControlsContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -728.0
offset_right = -25.0
offset_bottom = -686.0
grow_horizontal = 0
grow_vertical = 0

[node name="HistoryButton" type="Button" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.909804, 0.741176, 0.772549, 0.286275)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_scr08")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hkxqd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ngewe")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_s5n3v")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_qrqx2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6in5e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5poes")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gq6j1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p2i0s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_p17qu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6jtk0")
text = "History"

[node name="MenuButton" type="Button" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.909437, 0.742585, 0.7728, 0.286275)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_orud1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_akdev")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvc3f")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uymoo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xu5yj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_n5rkc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yusuu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0c6oi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wwriq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wfwvw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pgtnv")
text = "Menu"

[node name="CGTopContainer" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Static" type="CanvasLayer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
visible = false

[node name="ColorRect" type="ColorRect" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/Static"]
material = SubResource("ShaderMaterial_d8rgb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BlackFade" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("8_50byo")]
visible = false
layout_mode = 1

[node name="ChapterCover" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("12_vf2y4")]
visible = false
layout_mode = 1

[node name="Cheats" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("13_qackq")]
visible = false
layout_mode = 1

[node name="RollingCredits" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("17_gnute")]
visible = false
layout_mode = 1

[node name="ColorRect" type="TextureRect" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j1uqk")

[node name="StartCover" type="ColorRect" parent="LineReader/Camera2D/VNUICanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("13_qfsh6")

[node name="ScreenContainer" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="LineReader/Camera2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="LineReader/Camera2D/CanvasLayer"]
material = ExtResource("14_3xf2c")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="request_object_visible" from="LineReader" to="LineReader/Objects" method="set_object_visible"]
[connection signal="splatter" from="LineReader" to="." method="splatter"]
[connection signal="start_black_fade" from="LineReader" to="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/BlackFade" method="_on_handler_start_black_fade"]
[connection signal="start_chapter_cover" from="LineReader" to="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/ChapterCover" method="set_chapter_cover"]
[connection signal="start_hide_cg" from="LineReader" to="." method="hide_cg"]
[connection signal="start_rolling_credits" from="LineReader" to="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/RollingCredits" method="start"]
[connection signal="start_show_cg" from="LineReader" to="." method="_on_handler_start_show_cg"]
[connection signal="pressed" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="pressed" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer/MenuButton" to="." method="_on_menu_button_pressed"]

[editable path="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow1"]
[editable path="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/Windows/TextWindow2"]
